# Firmware

./: .gitignore  CMakeLists.txt  CMakePresets.json
RTT/Inc/: SEGGER_RTT.h
RTT/Src/: SEGGER_RTT.c
application/: CMakeLists.txt  app_main.cpp
application/core/: app_main.cpp  app_main.hpp  main.cpp  main.hpp
bootloader/: CMakeLists.txt  bootloader_main.cpp
bootloader/Inc/: boot_jump.hpp  bootloader_main.hpp
bootloader/Src/: boot_jump.cpp  hardware_init.c  setup_boot.c
bootloader/app/: boot_jump.cpp  boot_jump.hpp  crc_compute.cpp
bootloader/boot/: boot_jump.cpp  boot_jump.hpp  crc_compute.cpp  flash_config.cpp
bootloader/core/: bootloader_main.cpp  bootloader_main.hpp  main.cpp  main.hpp
cmake/: arm-none-eabi.cmake  stm32_project.cmake
common/: assert.c  assert.h  checker.hpp  common.hpp  const.hpp  errno.hpp  operators.hpp
common/arm_dsp/Inc/: controller_functions.h
common/inc/: assert.h  checker.hpp  common.hpp  common_types.h  const.hpp  drivers_const.hpp  errno.hpp  features.h  operators.hpp  types.h
common/src/: assert.c  operators.cpp
device/CMSIS/: cmsis_compiler.h  core_cm4.h  mpu_armv7.h
device/Inc/: hardware_core.h  hardware_core.hpp  peripherals_defs.h  peripherals_irqs.h
device/Src/: hardware_core.c  hardware_core.cpp  hardware_init.c  hardware_init.cpp  peripherals_irqs.c  peripherals_irqs.cpp  setup_app.c  setup_boot.c
device/config/linker_cmd/: STM32F303_app.cmd  STM32F303_boot.cmd  STM32G473_app.cmd  STM32G473_boot.cmd
device/config/linker_commands/: STM32F303_app.cmd  STM32F303_boot.cmd  STM32G473_app.cmd  STM32G473_boot.cmd
device/config/linker_scripts/: STM32G473_app.ld
device/core/: hw_core.cpp  hw_core.hpp  hw_init.c  periph_def.h  periph_irq.h  setup_app.c  setup_boot.c
device/core/inc/: hardware_core.hpp  hw_core.hpp  periph_def.h  periph_irq.h  peripherals_defs.h  peripherals_irqs.h
device/core/src/: hardware_core.cpp  hardware_init.c  hw_core.cpp  hw_init.c  periph_irq.cpp  peripherals_irqs.cpp  setup_app.c  setup_boot.c
device/drivers/crc/: crc.cpp  crc.hpp
device/drivers/flash/: flash.cpp  flash.hpp
device/drivers/gpio/: gpio.cpp  gpio.hpp
device/drivers/rcc/: rcc.cpp  rcc.hpp
device/hardware_drivers/Inc/: crc.hpp  flash.hpp
device/hardware_drivers/Src/: crc.cpp  flash.cpp
device/linker_commands/: STM32F303_app.cmd  STM32F303_boot.cmd  STM32G473_app.cmd  STM32G473_boot.cmd
generic/Inc/: common_types.h  features.h
generic/arm_dsp/Inc/: arm_math.h  fast_math_functions.h  matrix_functions.h
logging/rtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
logging/swo/: swo.c  swo.h
main_app/: CMakeLists.txt  app_main.cpp
main_app/Src/: setup_app.c
modules/display/: display.cpp  display.hpp
